# lib/api-spec/openapi.yaml
@@ -993,7 +993,7 @@ components:
 
     Settings:
       type: object
-      required: [companyName, phone, email, logoUrl, accentColor, loginGlowColor, contentBarColor, sidebarColor, loginPanelBg, loginRightBg, contentBg, smsCredit, smsLowStock, smsDaily, smsSenderId]
+      required: [companyName, phone, email, logoUrl, accentColor, loginGlowColor, contentBarColor, sidebarColor, loginPanelBg, loginRightBg, contentBg, smsCredit, smsLowStock, smsDaily, smsDailyTime, smsSenderId]
       properties:
         companyName:
           type: string
@@ -1023,6 +1023,8 @@ components:
           type: boolean
         smsDaily:
           type: boolean
+        smsDailyTime:
+          type: string
         smsSenderId:
           type: string
 
@@ -1057,6 +1059,8 @@ components:
           type: boolean
         smsDaily:
           type: boolean
+        smsDailyTime:
+          type: string
         smsSenderId:
           type: string
 
